# openai-transcribe-python

./: .gitignore  README.md  download-youtube.py  openai-key.properties  openai-key.properties.example  openai-test.py  openai-transcribe-mp3 copy.py  openai-transcribe-mp3.py  pyproject.toml  requirements.txt  setup.py  split-audio.py  transcribe-video-cli.py  transcribe_video.py
doc/: command.md
features/: environment.py  feature1.feature  feature2.feature
features/steps/: steps_feature1.py
sample/: batch_en.txt  batch_zh.txt  youtube_list_en.txt  youtube_list_ja.txt  youtube_list_zh.txt
subtitle_generator/: __init__.py  cli.py  cli_main.py  facebook_processor.py  logger.py  processor.py  recorder.py  slave.py  subtitle_generator.py  text_translator.py  video_processor.py  youtube_processor.py
subtitle_generator/util/: __init__.py  search.py
tests/: test_text_translator.py  test_youtube_processor.py
util/: count-file-number.py
