[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "subtitle-generator"
version = "0.2.0"
description = "A subtitle generation package using Whisper and M2M100"
authors = [{ name = "Eric Ho", email = "wingsum.developer@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = "==3.10.*"
dependencies = [
  "click>=7.1",
  "openai-whisper",
  "transformers",
  "pytubefix>=9.1.1",
  "yt-dlp>=2023.3.4",         # ✅ Replacing youtube-dl
  "tqdm",
  "ffmpeg-python==0.2.0",
  "numpy",
  "pydub>=0.25.1",
  "sounddevice",
  "scipy",
  "requests>=2.24.1",
  "torch==2.2.2",
  "torchaudio",
  "torchvision",

  # 🧪 Testing
  "pytest>=8.4.0",
  "pytest-mock>=3.14.1",
  "behave==1.2.6"
]


[project.scripts]
stt = "subtitle_generator.cli_main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["subtitle_generator", "subtitle_generator.*"]
